--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,44 @@
-group 'test'
-version '1.0-SNAPSHOT'
+group 'com.boyen'
+version '0.1.3'
 
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
+
+
+apply plugin: "com.gradle.plugin-publish"
+
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "com.gradle.publish:plugin-publish-plugin:0.9.10"
+    }
+}
+
+pluginBundle {
+    website = 'http://www.gradle.org/'
+    vcsUrl = 'https://github.com/boyenn/generator'
+    description = 'Object Generator'
+    tags = ['java']
+
+    plugins {
+        generatorPlugin {
+            id = 'com.boyen.personal.GeneratorGradlePlugin'
+            displayName = 'Object Generator plugin'
+        }
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    compile gradleApi()
     compile group: 'com.squareup', name: 'javapoet', version: '1.2.0'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
     compile group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.1.0.Final'
